# SwitchProConLinuxUSB

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  cbuild.sh  install.sh  install_binary.sh  install_rules.sh  main.cpp  mglvn.cpp  saria.cpp  test.c
src/: config.hpp  hidapi_wrapper.cpp  hidapi_wrapper.hpp  hidcontroller.hpp  output_sender.cpp  output_sender.hpp  print_color.hpp  procon.hpp  proinputparser.cpp  proinputparser.hpp  real_controller.cpp  real_controller.hpp  real_controller_connection.cpp  real_controller_connection.hpp  real_controller_exceptions.cpp  real_controller_exceptions.hpp  real_controller_layout.cpp  real_controller_layout.hpp  real_controller_packets.cpp  real_controller_packets.hpp  real_controller_parser.cpp  real_controller_parser.hpp  real_controller_rumble.cpp  real_controller_rumble.hpp  rumble.py  rumbledata.hpp  uinputcontroller.hpp  utils.cpp  utils.hpp  virtual_controller.cpp  virtual_controller.hpp  virtual_controller_connection.cpp  virtual_controller_connection.hpp  virtual_controller_rumble.cpp  virtual_controller_rumble.hpp
udev_rules/: 71-nintendo-controllers.rules
